# pyesb

./: .dockerignore  .gitignore  AGENT_GUIDE.md  AGENT_WORKFLOW.md  AUDIT.md  COMMAND_REFERENCE.md  DOCKER_README.md  Dockerfile  NAVIGATION.md  PROJECT_MAP.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  TODO.md  agent_navigation_guide.md  data.db  docker-compose.yml  logging.md  logging.yaml  pyproject.toml  todo.md  zed_agent_notes.md
.threadbridge/: meta.json  thread.json
.tmp/: TESTING_SUMMARY.md  debug_get_config.py  debug_get_config_detailed.py  debug_get_config_logic.py  debug_settings.py  debug_settings2.py  debug_settings3.py  debug_settings4.py
app/: __init__.py  __main__.py  amqp_server.py  auth.py  auth_utils.py  config.py  context.py  database.py  delivery.py  events.py  interfaces.py  lifespan.py  log.py  main.py  metadata.py  middleware.py  models.py  router.py  tasks.py  token.py
app/config/: __init__.py  _bootstrap.py  _database.py  _settings.py  logging.dev.yaml  logging.pro.yaml
app/delivery/: __init__.py  client.py  context.py  engine.py  headers.py  middleware.py  semaphore.py  tasks.py
app/events/: __init__.py  _formatter.py  _schemas.py  _stderr.py
app/exceptions/: __init__.py
app/ingress/: __init__.py  amqp.py  models.py  router.py
app/orchestration/: __init__.py  dlq.py  schedule.py
docs/: protocol.md
tests/: conftest.py  test_fault_tolerance.py  test_headers.py  test_job_message.py  test_log.py  test_middleware.py  test_router.py  test_smoke.py
tests/integration/: README.md  docker-compose.yml  run_docker_tests.sh  run_tests.sh  test_auth.py  test_docker_integration.py  test_metadata.py
tests/unit/: test_auth_utils.py  test_config.py  test_pydantic_settings.py  test_token_generation.py
