[project]
name = "pyesb"

dynamic = ["version"]
description = "1C ESB Gateway compatible server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.115.0",
    "pyesb-amqp",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=25.1.0",
    "pyyaml>=6.0.1",
    "apscheduler>=4.0.0a6",
    "httpx>=0.28.1",
    "sniffio>=1.3.1",
    "aiorun>=2025.1.1",
]

[tool.uv]
package = false


[project.optional-dependencies]
test = [
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "icecream>=2.2.0",
]

[tool.uv.sources]
pyesb-amqp = { git = "https://github.com/grevinden/pyesb-amqp.git" }
